was almost 36 seconds slower after only 6 hours!  I had the idea to update the clock at midnight,
but I guess I'll have to update every second.

12.3.2017
I made repairs to the message manager function.  It needed independent timing.  It still needs
attention

12.4.2017
I finished wiring up the AUX power wiring.  Begining a new function myAuxPowerfunction()and
myTestForMorningBatteryChargefunction()

12.5.2017
Improvements to sunrise / sunset variables

1.5.2018
New batteries!  4 x 100AH

BATTERY BENCHMARKS
START 13.3V  9:41 315WATTS OUT 84 IN 9:43 DROPPED TO 12.4 PRETTY QUICKLY, faster than i expected

1.6.2018
9:54:00 TO 9:55:30 READ 12.4 AT MONITOR, THEY JUMPED BACK TO 12.7, THEN .8 PRetty quickly mebbe 400 watts 

2.16.2018
I'm working on a two stage circuit swapping system for breakers 4 and 8 here in the workshop.


2.26.2018
I want to restructure the modes to make linear sense
mode 0 sleep =  aux power on
mode 1 wake  =  aux power off for x minutes to let batteries settle
idea:  a function that takes these parameters (min/max voltage allowable time min/max) 
       from one of the mode routines, and returns a number when the condition has been met.


5.1.2018 first object written!  MyTimer

5.8.2018 Trying to implement a "state machine"
5.11.2018  Success!  a machine with 16 states of being.  I'll be able to cut out a whole lot of
           spaghetti code now.
           
03-11-19 created GitLab Repository.  I had trouble with my daylight savings time change this year.  I will now
    apply my new knowledge of C++ to refactor this code.
03-11-19-10:28 create changelog, added update script
03-11-19-11:02 combined old project files
03-11-19-11:17 moving workbench_lighting_MOSFET_signal_pin to pin 10 due to a broken pin in the Arduino Mega pin 6 slot
03-11-19-11:23 moving battery_charger_signal_pin from pin 4 to pin 11 to address a possible bad transitor
03-11-19-11:53 myTimer initial refactor
03-11-19-12:01 localize time library