@@ -74,3 +74,4 @@ idea:  a function that takes these parameters (min/max voltage allowable time mi
 03-11-19-11:23 moving battery_charger_signal_pin from pin 4 to pin 11 to address a possible bad transitor
 03-11-19-11:53 myTimer initial refactor
 03-11-19-12:01 localize time library
+03-11-19-12:03 added library files
